fixed: awesome slider image cut off

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -124,7 +124,7 @@
     }
   }
   /* Slider */
-  .awssld
+  /* .awssld
     > .awssld__wrapper
     > .awssld__container
     > .awssld__box
@@ -132,6 +132,6 @@
     > img {
     max-height: 100%;
     max-width: 100%;
-    object-fit: scale-down;
-  }
+    object-fit: scale-down !important;
+  } */
 }
